[gd_scene load_steps=7 format=3 uid="uid://cbqykrdxy18va"]

[ext_resource type="Texture2D" uid="uid://c44ox2gdbw3ch" path="res://ui/menus/CraftingMenu/assets/CraftingMenu.png" id="1_3n6rx"]
[ext_resource type="PackedScene" uid="uid://puuhou3vf11u" path="res://ui/menus/CraftingMenu/subnodes/Ingredient.tscn" id="1_8prw0"]
[ext_resource type="Script" path="res://ui/menus/CraftingMenu/scripts/CraftingMenu.gd" id="1_tfgje"]
[ext_resource type="PackedScene" uid="uid://dpxlrqdys1uey" path="res://ui/menus/CraftingMenu/subnodes/IngredientSlot.tscn" id="3_67fb5"]

[sub_resource type="Gradient" id="Gradient_c2n8l"]
offsets = PackedFloat32Array(0.475155)
colors = PackedColorArray(0, 0, 0, 0.392157)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xwubr"]
gradient = SubResource("Gradient_c2n8l")

[node name="CraftingMenu" type="CanvasLayer"]
layer = 2
script = ExtResource("1_tfgje")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_xwubr")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(320, 180)
texture = ExtResource("1_3n6rx")

[node name="IngredientSlots" type="Node2D" parent="."]

[node name="IngredientSlot1" parent="IngredientSlots" instance=ExtResource("3_67fb5")]
position = Vector2(304, 240)

[node name="IngredientSlot2" parent="IngredientSlots" instance=ExtResource("3_67fb5")]
position = Vector2(400, 240)

[node name="Ingredients" type="Node2D" parent="."]

[node name="Ingredient1" parent="Ingredients" instance=ExtResource("1_8prw0")]
position = Vector2(498, 258)
ingredient_id = 1

[node name="Ingredient2" parent="Ingredients" instance=ExtResource("1_8prw0")]
position = Vector2(526, 270)
ingredient_id = 2

[node name="Ingredient3" parent="Ingredients" instance=ExtResource("1_8prw0")]
position = Vector2(491, 285)
ingredient_id = 3

[node name="Ingredient4" parent="Ingredients" instance=ExtResource("1_8prw0")]
position = Vector2(520, 298)
ingredient_id = 4

[node name="MixButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.0
offset_top = 33.0
offset_right = -88.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
disabled = true
text = "Mix"

[connection signal="ingredient_added" from="IngredientSlots/IngredientSlot1" to="." method="_ingredient_added"]
[connection signal="ingredient_removed" from="IngredientSlots/IngredientSlot1" to="." method="_ingredient_removed"]
[connection signal="ingredient_added" from="IngredientSlots/IngredientSlot2" to="." method="_ingredient_added"]
[connection signal="ingredient_removed" from="IngredientSlots/IngredientSlot2" to="." method="_ingredient_removed"]
[connection signal="pressed" from="MixButton" to="." method="_on_mix_button_pressed"]
